scripts/cluster/logs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-server
  labels: 
    app: logs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-server
  template:
    metadata:
      labels:
        app: logs-server
    spec:
      containers:
        - name: node
          image: node:latest
          ports:
            - containerPort: 3000
          command:
            - bash
          args:
            - -c
            - |
              [...]
---
kind: Service
apiVersion: v1
metadata:
  name: logs-server
  labels:
    app: logs-server
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: logs-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-logs
spec:
  rules:
    - host: logs.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              serviceName: logs-server
              servicePort: 3000
